--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,45 @@
  *= require_tree .
  *= require_self
  */
+p {
+  margin: 5px !important;
+}
+
+ body {
+  font: helvetica;
+ }
+
+ h1{
+  padding-bottom: 10px;
+ }
+
+
+ .formcontainer {
+  align-items: left;
+  padding: 20px;
+ }
+
+ .answercontainer {
+  width: 600px;
+  align-items: left;
+  padding: 20px;
+ }
+
+ .answer {
+  background-color: rgba(255,255,0,0.2);
+  padding: 5px;
+  margin-bottom: 20px;
+  border-left: 5px solid rgb(228, 228, 228);
+ }
+
+ .question {
+  background-color: rgba(223, 223, 223, 0.2);
+  padding: 5px;
+  border-left: 5px solid rgb(228, 228, 228);
+  margin-bottom: 20px;
+ }
+
+ .link a {
+  color: rgb(97, 131, 240);
+  text-decoration: none;
+ }
